--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "webpack serve --env port=666",
     "build:prod": "webpack --env mode=production",
     "build:dev": "webpack --env mode=development",
-    "lint:ts": "eslint \"**/*.{ts,tsx}\"",
-    "lint:ts:fix": "eslint \"**/*.{ts,tsx}\" --fix"
+    "lint:css": "npx stylelint \"**/*.scss\"",
+    "lint:css:fix": "npx stylelint \"**/*.scss\" --fix"
   },
   "keywords": [],
   "author": "",
@@ -28,6 +28,7 @@
     "css-loader": "^6.7.3",
     "eslint": "^8.34.0",
     "eslint-config-standard-with-typescript": "^34.0.0",
+    "eslint-plugin-i18next": "^6.0.0-6",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
@@ -38,6 +39,9 @@
     "sass": "^1.58.1",
     "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
+    "stylelint": "^15.1.0",
+    "stylelint-config-standard-scss": "^7.0.1",
+    "stylelint-order": "^6.0.2",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.5.0",
     "typescript": "^4.9.5",
