--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "style-loader": "^3.3.1",
     "stylelint": "^14.5.3",
     "stylelint-config-standard-scss": "^3.0.0",
+    "stylelint-order": "^6.0.2",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
