--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
       matrix:
         node-version: [ 17.x ]
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Staring Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
@@ -27,3 +27,7 @@ jobs:
         run: npm run lint:ts
       - name: test unit
         run: npm run test:unit
+      - name: build storybook
+        run: npm run storybook:build
+      - name: test ui
+        run: npm run test:ui
