update sidebar, add button themes

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,9 +19,11 @@
     },
     "plugins": [
         "react",
-        "@typescript-eslint"
+        "@typescript-eslint",
+        "unused-imports"
     ],
     "rules": {
+        "unused-imports/no-unused-imports": "error",
         "semi": ["error", "always"],
         "indent": [
             "error",
