--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -5,6 +5,7 @@
   ],
   "rules": {
     "selector-class-pattern": null,
+    "scss/at-import-partial-extension": null,
     "indentation": [2],
     "order/order": [
       "custom-properties",
