--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,10 +20,14 @@ jobs:
       - name: install modules
         run: npm install
       - name: build production
+        if: always()
         run: npm run build:prod
       - name: lint scss
+        if: always()
         run: npm run lint:scss
       - name: lint ts
+        if: always()
         run: npm run lint:ts
       - name: test unit
+        if: always()
         run: npm run test:unit
