--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,7 +20,8 @@
     "plugins": [
         "react",
         "@typescript-eslint",
-        "unused-imports"
+        "unused-imports",
+        "react-hooks"
     ],
     "rules": {
         "unused-imports/no-unused-imports": "error",
@@ -57,6 +58,8 @@
         "react/react-in-jsx-scope": "off",
         "comma-dangle": ["error", "never"],
         "@typescript-eslint/no-non-null-assertion": "off",
-        "react/no-unescaped-entities": "off"
+        "react/no-unescaped-entities": "off",
+        "react-hooks/rules-of-hooks": "error",
+        "react-hooks/exhaustive-deps": "error"
     }
 }
